# bazel-mre

./: BUILD.bazel  WORKSPACE  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
_build/: ts.bzl
app/app-a/: BUILD.bazel  index.ts  package.json
lib/lib-a/: BUILD.bazel  package.json
